--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <hr>
         <div id="change_language">
-            <a href=""><img src="./Data/images/japan.png" alt=""></a>
-            <a href=""><img src="./Data/images/united-states-of-america.png" alt=""></a>
+            <a href="https://nhuthuynh2000.github.io/My-Resume/"><img src="./Data/images/japan.png" alt=""></a>
+            <a href="https://nhuthuynh2000.github.io/Portfolio/"><img src="./Data/images/united-states-of-america.png" alt=""></a>
         </div>
         <div id="about_me">
             Chào mọi người, tôi là Huỳnh Nguyễn. Tôi là một nhà phát triển web, 
