--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Project related css files -->
-    <link rel="stylesheet" type="text/css" href="./styles/project_styles/delivery_driver.css" />
-    <link rel="stylesheet" type="text/css" href="./styles/project_styles/quiz_master.css" />
     <link rel="stylesheet" type="text/css" href="./styles/project_styles/defense_the_realm.css" />
     <link rel="stylesheet" type="text/css" href="./styles/project_styles/mini_shoot.css" />
     <link rel="stylesheet" type="text/css" href="./styles/project_styles/genshin.css" />
+    <link rel="stylesheet" href="text/css" href="./styles/project_styles/homeland.css">
+    <link rel="stylesheet" href="text/css" href="./styles/project_styles/bank.css">
+    <link rel="stylesheet" href="text/css" href="./styles/project_styles/blood.css">
+    <link rel="stylesheet" href="text/css" href="./styles/project_styles/travel.css">
+    <link rel="stylesheet" href="text/css" href="./styles/project_styles/vks.css">
 
     <!-- Icon -->
     <link rel="icon" type="image/png" href="./data/images/icon-trans.png">
