--- a/Data/pages/skills.html
+++ b/Data/pages/skills.html
@@ -15,7 +15,7 @@
                 <span class="metric-value">70</span>
             </div>
             <div class="metric" style="width:60%">
-                "Java"
+                "JSP"
                 <span class="metric-value">60</span>
             </div>
             <div class="metric" style="width:60%">
