--- a/Data/pages/careers/education.html
+++ b/Data/pages/careers/education.html
@@ -4,9 +4,9 @@
     <div class="edu-title">
         "Green Academy"
         <br>
-        "2023 - 2024"
+        "2024 - Present"
     </div>
-    "Tôi tốt nghiệp với chứng chỉ Game Developer."
+    "Tôi sắp tốt nghiệp với chứng chỉ Game Developer."
 </div>
 <br>
 <hr>
