--- a/Data/pages/skills.html
+++ b/Data/pages/skills.html
@@ -10,6 +10,22 @@
                 "C#"
                 <span class="metric-value">90</span>
             </div>
+            <div class="metric" style="width:80%">
+                "HTML"
+                <span class="metric-value">80</span>
+            </div>
+            <div class="metric" style="width:80%">
+                "CSS"
+                <span class="metric-value">80</span>
+            </div>
+            <div class="metric" style="width:80%">
+                "Javascript"
+                <span class="metric-value">80</span>
+            </div>
+            <div class="metric" style="width:70%">
+                "SQL"
+                <span class="metric-value">70</span>
+            </div>
             <div class="metric" style="width:70%">
                 "Java"
                 <span class="metric-value">70</span>
@@ -19,20 +35,33 @@
                 <span class="metric-value">60</span>
             </div>
             <div class="metric" style="width:60%">
-                "HTML"
-                <span class="metric-value">60</span>
-            </div>
-            <div class="metric" style="width:60%">
-                "CSS"
-                <span class="metric-value">60</span>
-            </div>
-            <div class="metric" style="width:60%">
-                "Javascript"
-                <span class="metric-value">60</span>
-            </div>
-            <div class="metric" style="width:60%">
                 "C++"
                 <span class="metric-value">60</span>
+            </div>
+        </div>
+        <br>
+        <hr>
+        <div id="skill-chart-title">Framework</div>
+        <div class="chart-parent chart chart-bar chart-horizontal">
+            <div class="metric" style="width:70%">
+                "Bootstrap"
+                <span class="metric-value">70</span>
+            </div>
+            <div class="metric" style="width:70%">
+                "Jquery"
+                <span class="metric-value">70</span>
+            </div>
+            <div class="metric" style="width:70%">
+                "React.js"
+                <span class="metric-value">70</span>
+            </div>
+            <div class="metric" style="width:65%">
+                "Node.js"
+                <span class="metric-value">65</span>
+            </div>
+            <div class="metric" style="width:65%">
+                "Express.js"
+                <span class="metric-value">65</span>
             </div>
         </div>
         <br>
